[workspace]

members = [
    "buildscript",
    "game",
    "ttt",
    "render",
    "asset_macro",
    "frame_lag",
    "dbe",
    "miniscript",
    "things",
    "rw_bot",
    "dumbvm",
    "imagesfilter"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3

[profile.release]
opt-level = 3
#strip = true
lto = true
codegen-units = 1