[package]
name = "dbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
im-rc = "15.1.0"
num-traits = "0.2.15"
egui = "0.21.0"
egui-macroquad = "0.15.0"
macroquad = "0.3"
rustc-hash = "1.1.0"
thiserror = "1.0.40"
things = { path = "../things" }
serde = "1.0.160"
serde_json = "1.0.96"
strum = "0.24"
