[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.0"
winapi = "0.3.9"
rand = "0.8.5"
colored = "2.0.0"
frame_lag = { path = "../frame_lag" }
hecs = "0.10.2"
rapier2d = { version = "0.17.2", features = ["simd-stable", "parallel"] }
nalgebra = "0.32.2"
rustc-hash = "1.1.0"
