[package]
name = "miniscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
strum = "0.25"
strum_macros = "0.25"
num-traits = "0.2"
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
derive_more = "0.99"
lazy_static = "1"
ariadne = "0.3.0"
rustc-hash = "1"
libm = { version = "0.2", optional = true }
cfg-if = "1"
auto_ops = "0.3"

[features]
libm = ["dep:libm"]