[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
macroquad = "0.3"
rustc-hash = "1.1.0"
bevy_ecs = { version = "0.10.1", optional = true }

[features]
bevy_ecs = ["dep:bevy_ecs"]