[package]
name = "rw_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
poise_macros = "0.5.5"
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0.163"
serde_json = "1.0.96"
lazy_static = "1.4.0"
rand="0.8.5"
anyhow = "1.0.71"
rustc-hash = "1.1.0"