[package]
name = "things"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
as-any = "0.3.0"
num-traits = "0.2.15"
rustc-hash = "1.1.0"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
proptest = "1"
test-strategy = "0.3.0"