[package]
name = "ttt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
winapi = "0.3.9"
#rand = "0.8.5"
frame_lag = { path = "../frame_lag" }
render = { path = "../render", features = ["bevy_ecs"] }
asset_macro = { path = "../asset_macro" }
bevy_ecs = "0.10.1"
nalgebra = "0.32.2"
rustc-hash = "1.1.0"
lazy_static = "1.4.0"
grid = "0.10.0"
